--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,35 +18,50 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.4" />
 
-    <LinearLayout
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/btn_mainActivity_start"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="100sp"
-        android:orientation="vertical"
+        android:checkable="true"
+        android:clickable="true"
+        android:elevation="10sp"
+        android:focusable="true"
+        app:layout_constraintBottom_toTopOf="@+id/tv_mainActivity_timeDisplay"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:orientation="vertical"
+            android:padding="50sp">
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/iv_MainActivity_nextButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:srcCompat="@drawable/ic_sitting" />
+
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tv_mainActivity_nextButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/str_tv_MainActivity_nextButton" />
+        </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_mainActivity_stop"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/str_btn_mainActivity_stop"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/tv_mainActivity_timeDisplay">
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_mainActivity_start"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/str_btn_mainActivity_start" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_mainActivity_stop"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/str_btn_mainActivity_stop" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_mainActivity_reset"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/str_btn_mainActivity_reset" />
-
-    </LinearLayout>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_mainActivity_timeDisplay" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
