--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,4 +7,18 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+
+    <!-- Your custom dialog style, don't forget to specify the parent style! -->
+    <style name="CustomIconDialogStyle" parent="IcdStyle">
+        <item name="icdIconSize">72dp</item>
+        <item name="icdIconColor">#FF0000</item>
+        <item name="icdListHeaderStyle">@style/CustomHeaderStyle</item>
+    </style>
+
+    <!-- Custom style for the list headers, again don't forget the parent! -->
+    <style name="CustomHeaderStyle" parent="IcdListHeaderStyle">
+        <item name="android:textAllCaps">true</item>
+        <item name="android:typeface">monospace</item>
+    </style>
+
 </resources>
