--- a/app/src/main/res/layout/layout_colordialog.xml
+++ b/app/src/main/res/layout/layout_colordialog.xml
@@ -23,8 +23,10 @@
             android:id="@+id/tv_colordialog_display"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
             android:text="@string/str_tv_colordialog_display"
+            android:gravity="center"
             android:textSize="20sp" />
 
     </RelativeLayout>
