--- a/app/src/main/res/layout/layout_colordialog.xml
+++ b/app/src/main/res/layout/layout_colordialog.xml
@@ -17,17 +17,7 @@
             android:layout_width="match_parent"
             android:layout_height="40sp"
             android:layout_gravity="center_horizontal"
-            android:background="@color/colorAccent" />
-
-        <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/tv_colordialog_display"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:text="@string/str_tv_colordialog_display"
-            android:gravity="center"
-            android:textSize="20sp" />
+            android:background="@color/red" />
 
     </RelativeLayout>
 
