--- a/app/src/main/res/layout/activity_set_routine.xml
+++ b/app/src/main/res/layout/activity_set_routine.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="de.threateningcodecomments.routinetimer.SetRoutine">
+    tools:context="de.threateningcodecomments.routinetimer.DEPRECATED_SetRoutine">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cv_SetRoutine_main"
