--- a/app/src/main/res/layout/recyclerview_viewholder.xml
+++ b/app/src/main/res/layout/recyclerview_viewholder.xml
@@ -15,25 +15,86 @@
         android:orientation="horizontal"
         android:padding="5sp">
 
-        <com.google.android.material.imageview.ShapeableImageView
-            android:id="@+id/iv_SelectRoutine_rv_imageView"
-            app:shapeAppearanceOverlay="@style/rectImageView"
-            android:layout_width="@dimen/recyclerview_viewholder_iv_size"
-            android:layout_height="@dimen/recyclerview_viewholder_iv_size"
-            android:src="@drawable/ic_add" />
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
+            android:id="@+id/cl_SelectRoutine_rv_coordinatorLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <com.google.android.material.imageview.ShapeableImageView
+                android:id="@+id/iv_SelectRoutine_rv_singleImage"
+                android:layout_width="@dimen/recyclerview_viewholder_iv_size"
+                android:layout_height="@dimen/recyclerview_viewholder_iv_size"
+                android:src="@drawable/ic_add"
+                app:shapeAppearanceOverlay="@style/rectImageView" />
+
+            <GridLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:columnCount="2"
+                android:rowCount="2">
+
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:id="@+id/iv_SelectRoutine_rv_smallImage_1"
+                    android:layout_width="@dimen/recyclerview_viewholder_smallIv_size"
+                    android:layout_height="@dimen/recyclerview_viewholder_smallIv_size"
+                    android:layout_gravity="top|start"
+                    android:src="@drawable/ic_add"
+                    app:shapeAppearanceOverlay="@style/rectImageView" />
+
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:id="@+id/iv_SelectRoutine_rv_smallImage_2"
+                    android:layout_width="@dimen/recyclerview_viewholder_smallIv_size"
+                    android:layout_height="@dimen/recyclerview_viewholder_smallIv_size"
+                    android:layout_gravity="top|end"
+                    android:src="@drawable/ic_add"
+                    app:shapeAppearanceOverlay="@style/rectImageView" />
+
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:id="@+id/iv_SelectRoutine_rv_smallImage_3"
+                    android:layout_width="@dimen/recyclerview_viewholder_smallIv_size"
+                    android:layout_height="@dimen/recyclerview_viewholder_smallIv_size"
+                    android:layout_gravity="bottom|start"
+                    android:src="@drawable/ic_add"
+                    app:shapeAppearanceOverlay="@style/rectImageView" />
+
+                <com.google.android.material.imageview.ShapeableImageView
+                    android:id="@+id/iv_SelectRoutine_rv_smallImage_4"
+                    android:layout_width="@dimen/recyclerview_viewholder_smallIv_size"
+                    android:layout_height="@dimen/recyclerview_viewholder_smallIv_size"
+                    android:layout_gravity="bottom|end"
+                    android:src="@drawable/ic_add"
+                    app:shapeAppearanceOverlay="@style/rectImageView" />
+
+            </GridLayout>
+
+        </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
         <Space
-            android:layout_width="20sp"
+            android:layout_width="10sp"
             android:layout_height="wrap_content" />
 
-        <TextView
-            android:id="@+id/tv_SelectRoutine_rv_textView"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:maxLines="1"
-            android:text="Routine name"
-            android:textSize="25sp" />
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tv_SelectRoutine_rv_routineName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:maxLines="1"
+                android:text="Routine name"
+                android:textSize="17sp" />
+
+            <TextView
+                android:id="@+id/tv_Select"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="last used"
+                android:textSize="12sp" />
+
+        </LinearLayout>
 
 
     </LinearLayout>
