--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,5 +6,7 @@
     <dimen name="app_bar_height">200sp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="text_margin">16dp</dimen>
+
     <dimen name="recyclerview_viewholder_iv_size">60sp</dimen>
+    <dimen name="recyclerview_viewholder_smallIv_size">30sp</dimen>
 </resources>
