--- a/app/src/main/res/layout/activity_set_routine.xml
+++ b/app/src/main/res/layout/activity_set_routine.xml
@@ -1,12 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="de.threateningcodecomments.routinetimer.DEPRECATED_SetRoutine">
+    android:layout_height="match_parent">
 
-    <com.google.android.material.card.MaterialCardView
+    <!--<com.google.android.material.card.MaterialCardView
         android:id="@+id/cv_SetRoutine_main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -63,7 +60,7 @@
             app:boxCornerRadiusTopStart="@dimen/dimen_textFieldCorners">
 
             <AutoCompleteTextView
-                android:id="@+id/legacy_dd_SelectRoutine_createRoutine_mode"
+                android:id="@+id/dd_SelectRoutine_createRoutine_mode"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="none" />
@@ -125,5 +122,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
-
+-->
 </androidx.constraintlayout.widget.ConstraintLayout>
